added request permission for android > 6.0

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
 		<!-- ENABLE this for example using bluenet library through BleScanService -->
 		<activity
 			android:name=".MainActivityService"
-			android:label="@string/app_name" >
+			android:label="@string/app_name"
+			android:screenOrientation="portrait"
+			>
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
